# Stockdata-dashboard

./: .gitignore  Pipfile  TestDB1.db  pyproject.toml  readme.md
.mypy_cache/3.8/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  app.data.json  app.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  datetime.data.json  datetime.meta.json  db.data.json  db.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  time.data.json  time.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  utils.data.json  utils.meta.json
.mypy_cache/3.8/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.8/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.8/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
.mypy_cache/3.8/sqlite3/: __init__.data.json  __init__.meta.json  dbapi2.data.json  dbapi2.meta.json
airflow/: airflow-webserver.err  airflow.cfg  airflow.db  unittests.cfg
airflow/dags/: db_init.py
airflow/logs/scheduler/: latest
app/: app.py  db.py  get_symbols.py  initdb.py  nasdaq.csv  settings.py  tickers.csv  update_db.py  utils.py
